@@ -9,6 +9,7 @@
 .: WSM: BugFix: Close page permanently not redirect to page list (WSM-167)
 .: WSM: Task: Update package description (WSM-170)
 .: WSM: Task: Update catalogue items when navigate to them (WSM-164)
+.: WSM: BugFix: Submenu is hidden when hovering (WSM-58)
 
 ---------------------------------------------
 - 2020-07-18                                -
